fixed graph modification routines and finished the complete simulation in Analyzer